--- a/test/hooks/main.hook.yml
+++ b/test/hooks/main.hook.yml
@@ -9,7 +9,7 @@
   when: >-
     (((env_node | default('')) == '') or (env_node == instance_type))
     and
-    (instance_type in (env.custom_cloud_params[hook_name] | default([])))
+    (instance_type in (env.ext_cloud_params[hook_name] | default([])))
   tags: ["no_print_skipped"]
 # - name: "[hook] {{ hook_name }} - custom tasks"
 #   include_tasks: "{{ tmp_task }}"
