--- a/tasks/s3/main.s3.yml
+++ b/tasks/s3/main.s3.yml
@@ -8,6 +8,7 @@
       credentials: "{{ inner_service_credentials }}"
       contents: "{{ inner_service_contents }}"
   register: ext_s3_data_wrapper
+  tags: ["no_print"]
 
 - name: "{{ inner_service_title }} - s3 - manage buckets"
   aws_s3:
