--- a/tasks/s3/validator.s3.yml
+++ b/tasks/s3/validator.s3.yml
@@ -1,3 +1,9 @@
-- name: "{{ validator_title }} - validate if the collection (with the library) is present"
-  lrd.ext_cloud.collection_validator:
-    input: "[task] {{ validator_item.task }}"
+- name: "{{ validator_title }} - s3 - validate"
+  lrd.ext_cloud.vars:
+    identifier: "s3"
+    raw_data:
+      namespace: "ext_s3"
+      state: "present"
+      params: "{{ validator_item.data.params | default({}) }}"
+      credentials: "{{ validator_item.data.credentials | default({}) }}"
+      contents: "{{ validator_item.data.contents | default({}) }}"
