--- a/tasks/node/digital_ocean/digital_ocean.schema.node.yml
+++ b/tasks/node/digital_ocean/digital_ocean.schema.node.yml
@@ -4,6 +4,10 @@ schemas:
     type: "dict"
     description: "schema for the digital ocean node task"
     props:
+      namespace:
+        type: "str"
+        non_empty: true
+        choices: ["ext_node"]
       params:
         schema: "params"
         non_empty: true
