--- a/tasks/s3/schema.s3.yml
+++ b/tasks/s3/schema.s3.yml
@@ -4,6 +4,10 @@ schemas:
     type: "dict"
     description: "schema for the s3 task"
     props:
+      namespace:
+        type: "str"
+        non_empty: true
+        choices: ["ext_s3"]
       params:
         schema: "params"
         non_empty: true
