--- a/tasks/s3/validator.s3.yml
+++ b/tasks/s3/validator.s3.yml
@@ -2,8 +2,8 @@
   lrd.ext_cloud.vars:
     identifier: "s3"
     raw_data:
-      namespace: "ext_s3"
       state: "present"
+      namespace: "{{ validator_item.data.namespace | default('') }}"
       params: "{{ validator_item.data.params | default({}) }}"
       credentials: "{{ validator_item.data.credentials | default({}) }}"
       contents: "{{ validator_item.data.contents | default({}) }}"
