--- a/tasks/vpn/digital_ocean/digital_ocean.schema.vpn.yml
+++ b/tasks/vpn/digital_ocean/digital_ocean.schema.vpn.yml
@@ -4,6 +4,10 @@ schemas:
     type: "dict"
     description: "digital ocean vpn schema"
     props:
+      namespace:
+        type: "str"
+        non_empty: true
+        choices: ["ext_vpn"]
       params:
         schema: "params"
         non_empty: true
