--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,3 +1,3 @@
 FROM lucasbasquerotto/cloud:1.6.1
 
-RUN yes | pip3 install boto boto3 botocore
+RUN yes | pip3 install boto boto3 botocore requests
